--- a/src/main/resources/templates/admin/include/sidebar.html
+++ b/src/main/resources/templates/admin/include/sidebar.html
@@ -14,6 +14,12 @@
         <li class="nav-heading">Management</li>
 
         <li class="nav-item">
+            <a class="nav-link collapsed" th:href="@{/admin/departments}">
+                <i class="bi bi-building"></i>
+                <span>Quản lý Khoa</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link collapsed" th:href="@{/admin/manage-doctor}">
                 <i class="bi bi-person-badge"></i>
                 <span>Quản lý bác sĩ</span>
